@@ -16,6 +16,7 @@
 * Added documentation for an external thumbnailing server
 * Link to online help from inside the site - for error messages
 * Fixed Amazon S3 support
+* Automatic htaccess setup
 
 2.6.2  Will Entriken <cameralife AT phor.net>
 * Website update, thanks to Rajesh Sundaram
